reservation box z-index fix

--- a/assets/front/css/style.css
+++ b/assets/front/css/style.css
@@ -130,7 +130,7 @@ a:hover {text-decoration: none;color: #fff;}
 .scured-black {text-align: right;padding: 10px;}/* end part */
 #fixed-row {}/* row */
 .fixed-row {position: fixed;top: 0;z-index: 9999;width: 85%;}/* end row */
-.fixed-rez {position: fixed;top: 30px;z-index: 9999; margin-left:17px;}
+.fixed-rez {position: fixed;top: 30px;z-index: 999; margin-left:17px;}
 /* ------------------------------------------------------- end fixed-parts */
 
 .foo-btm, .foo-top {padding: 30px 0;}
